# HTL-NVS-5-Klasse

./: .gitignore  README.md
01_processes/: meson.build
01_processes/src/: aba.cpp  charout.cpp
02_threads/: meson.build
02_threads/include/: Car.h
02_threads/src/: Car.cpp  main.cpp
03_sync1/: meson.build
03_sync1/include/: account.h
03_sync1/src/: account.cpp  main.cpp
04_sync2/: meson.build
04_sync2/include/: work_packet.h  work_queue.h
04_sync2/src/: main.cpp  work_queue.cpp
05_sync3/: meson.build
05_sync3/include/: philosopher.h  semaphore.h  utils.h
05_sync3/src/: main.cpp  philosopher.cpp  semaphore.cpp  utils.cpp
06_future/: meson.build
06_future/include/: calc_factors.h
06_future/src/: main.cpp
07_berkeley/: meson.build  meson_options.txt
07_berkeley/include/: clock.h  pipe.h
07_berkeley/src/: clock.cpp  main.cpp
08_daytime/: meson.build  meson_options.txt
08_daytime/src/daytime_client/: main.cpp
08_daytime/src/daytime_server/: main.cpp
