option('asio_include_dir', type : 'string', value : '', description : 'the include dir of asio')
option('doctest_include_dir', type : 'string', value : '', description : 'the include dir of doctest')
option('cli11_include_dir', type : 'string', value : '/home/lessi/', description : 'the dir containing CLI11.hpp')
option('cppfsm_include_dir', type : 'string', value : '', description : 'the dir containing fsm.h')
option('httplib_include_dir', type : 'string', value : '', description : 'the dir containing httplib.h')
option('subprocess_include_dir', type : 'string', value : '', description : 'the dir containing subprocess.hpp')
option('peglib_include_dir', type : 'string', value : '', description : 'the dir containing peglib.h')
option('criterion_include_dir', type : 'string', value : '', description : 'the dir containing criterion.hpp')
option('fmt_include_dir', type : 'string', value : '', description : 'the include dir of fmt')
option('glob_include_dir', type : 'string', value : '', description : 'the dir containing glob.hpp')
option('inja_include_dir', type : 'string', value : '', description : 'the dir containing inja.hpp')
option('json_include_dir', type : 'string', value : '', description : 'the include dir of json')
option('magic_enum_include_dir', type : 'string', value : '', description : 'the dir containing magic_enum.hpp')
option('pprint_include_dir', type : 'string', value : '', description : 'the dir containing pprint.hpp')
option('rang_include_dir', type : 'string', value : '', description : 'the dir containing rang.hpp')
option('spdlog_include_dir', type : 'string', value : '/home/lessi/spdlog', description : 'the include dir of spdlog')
option('sml_include_dir', type : 'string', value : '', description : 'the dir containing sml.hpp')
option('tabulate_include_dir', type : 'string', value : '', description : 'the dir containing tabulate.hpp')
option('taskflow_include_dir', type : 'string', value : '', description : 'the dir containing the dir taskflow')
option('toml_include_dir', type : 'string', value : '', description : 'the include dir of toml++')
option('tfile_include_dir', type : 'string', value : '', description : 'the dir containing tfile.h')
option('sqlite_orm_include_dir', type : 'string', value : '', description : 'the dir containing sqlite_orm.h')
